<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ba.unsa.etf.rma.rijad.rmaspirala.KategorijeAkt">

        <Button
            android:id="@+id/dPretraga"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundbutton"
            android:text="@string/pretraga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.917"
            app:layout_constraintStart_toEndOf="@+id/tekstPretraga"
            app:layout_constraintTop_toBottomOf="@+id/dKategorije" />


        <Button
            android:id="@+id/dDodajKategoriju"
            android:layout_width="143dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundbutton"
            android:text="@string/dodaj_kategoriju"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tekstPretraga"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/tekstPretraga"
            android:layout_width="167dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/dodavanjeKnjigeEditText"
            android:ems="10"
            android:hint="@string/unesite_kategoriju"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dAutor" />

        <Button
            android:id="@+id/dDodajKnjigu"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundbutton"
            android:text="@string/dodaj_knjigu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toEndOf="@+id/dDodajKategoriju"
            app:layout_constraintTop_toBottomOf="@+id/dPretraga" />

        <Button
            android:id="@+id/dAutor"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundbutton"
            android:text="@string/autori"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dKategorije"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundbutton"
            android:text="@string/kategorije"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toEndOf="@+id/dAutor"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="368dp"
            android:layout_height="315dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/dodavanjeKnjigeEditText"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dDodajKnjigu">

            <ListView
                android:id="@+id/listaKategorija"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>